<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/GridLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="6"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.bmicalculator1.MainActivity" >

    <LinearLayout
        android:id="@+id/unitLayout"
        android:layout_height="50dp"
        android:layout_column="0"
        android:layout_columnSpan="6"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0" >

        <RadioGroup
            android:id="@+id/ubitRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/englishRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/englishRadio1" />

            <RadioButton
                android:id="@+id/metricRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/metricRadio2" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/weightLayout"
        android:layout_column="0"
        android:layout_columnSpan="6"
        android:layout_gravity="fill_horizontal"
        android:layout_row="1" >

        <TextView
            android:id="@+id/weightText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weightText"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/weightEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/heightLayout"
        android:layout_column="0"
        android:layout_columnSpan="6"
        android:layout_gravity="fill_horizontal"
        android:layout_row="2" >

        <TextView
            android:id="@+id/heightText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heightText"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/heightEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/calculateLayout"
        android:layout_column="0"
        android:layout_columnSpan="6"
        android:layout_gravity="fill_horizontal"
        android:layout_row="3"
        android:orientation="vertical" >
    </LinearLayout>

    <Space
        android:layout_width="74dp"
        android:layout_height="1dp"
        android:layout_column="0"
        android:layout_row="0" />

    <Space
        android:layout_width="26dp"
        android:layout_height="1dp"
        android:layout_column="1"
        android:layout_row="0" />

    <Space
        android:layout_width="20dp"
        android:layout_height="1dp"
        android:layout_column="4"
        android:layout_row="0" />

    <Space
        android:layout_width="1dp"
        android:layout_height="16dp"
        android:layout_column="0"
        android:layout_row="3" />

    <Space
        android:layout_width="157dp"
        android:layout_height="1dp"
        android:layout_column="5"
        android:layout_row="0" />

    <Space
        android:layout_width="1dp"
        android:layout_height="10dp"
        android:layout_column="0"
        android:layout_row="7" />

    <Space
        android:layout_width="1dp"
        android:layout_height="22dp"
        android:layout_column="0"
        android:layout_row="8" />

    <Space
        android:layout_width="1dp"
        android:layout_height="128dp"
        android:layout_column="0"
        android:layout_row="10" />

    <Space
        android:layout_width="100dp"
        android:layout_height="128dp"
        android:layout_column="0"
        android:layout_row="11" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="4"
        android:text="@string/calculateButton" />

    <TextView
        android:id="@+id/calcAnalysisText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="left|fill_vertical"
        android:layout_row="10"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/largeText"
        android:layout_width="284dp"
        android:layout_height="66dp"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="6"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</GridLayout>